--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.2.0",
+    "node-fetch": "^3.3.1",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.21",
     "sequelize": "^6.29.3",
